--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,18 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compileOnly 'org.projectlombok:lombok:1.16.10'
     compile 'com.google.guava:guava:19.0'
+    compile 'org.functionaljava:functionaljava:4.6'
+    compile 'org.functionaljava:functionaljava-java8:4.6'
+    compile 'org.functionaljava:functionaljava-quickcheck:4.6'
+    compile 'org.functionaljava:functionaljava-java-core:4.6'
+    compile 'com.google.code.gson:gson:2.7'
+    compileOnly 'org.projectlombok:lombok:1.16.10'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+    testCompileOnly 'org.projectlombok:lombok:1.16.10'
 }
